--- a/profil.css
+++ b/profil.css
@@ -7,7 +7,7 @@
 }
 
 *{
-   font-family: 'Orbitron', sans-serif;
+   font-family: sans-serif;
    font-size: 16px;
    margin:0; padding:0;
    box-sizing: border-box;
